fixed css alignment

--- a/src/Components/Qualifications.css
+++ b/src/Components/Qualifications.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   border: none;
   background-color: var(--primary-color);
-  height: 6rem;
+  height: 7rem;
 }
 
 .qualification span {
