--- a/src/Components/ResumePersonalInfo.css
+++ b/src/Components/ResumePersonalInfo.css
@@ -12,7 +12,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #091f41;
+  background-color: #484c5c;
   height: 12rem;
 }
 
